ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product_Kit_Product__c/Product_Kit_Product__c.object-meta.xml
<CustomObject>
    <description>Junction to link 2 products for kits</description>
    <label>Product Kit Product</label>
    <nameField>
        <displayFormat>PKP-{0000}</displayFormat>
        <label>Product Kit Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Kit Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>