ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product_Kit_Product__c/fields/Child_Product__c.field-meta.xml
<CustomField>
    <fullName>Child_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Child product in kit</description>
    <label>Child Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Kit Products (Child Product)</relationshipLabel>
    <relationshipName>Product_Kit_Products1</relationshipName>
    <type>Lookup</type>
</CustomField>