ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product_Kit_Product__c/fields/Parent_Product__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Product for Kit</description>
    <label>Parent Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Kit Products</relationshipLabel>
    <relationshipName>Product_Kit_Products</relationshipName>
    <type>Lookup</type>
</CustomField>