ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product_Kit_Product__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <description>Not needed here - but capturing from ItemRelations csv</description>
    <label>Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>